# cbct-sim

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
backend/: .env.example  .pre-commit-config.yaml  README.md  gate_visu_13178.wrl  main.py  pyproject.toml  requirements.txt
backend/api/: __init__.py  dependencies.py
backend/api/routes/: actors.py  simulations.py  sources.py  volumes.py
backend/app/: main.py
backend/app/actors/: dependencies.py  router.py  schema.py  service.py
backend/app/api/: __init__.py  dependencies.py
backend/app/core/: __init__.py  config.py  database.py  exceptions.py  router.py
backend/app/models/: __init__.py  simulation.py  source.py
backend/app/repositories/: simulation_repository.py  source_repository.py
backend/app/schemas/: actor.py  simulation.py  volume.py
backend/app/services/: actor_service.py  simulation_service.py  source_service.py  volume_service.py
backend/app/shared/: primitives.py  utils.py
backend/app/simulations/: dependencies.py  model.py  repository.py  router.py  schema.py  service.py
backend/app/sources/: dependencies.py  model.py  repository.py  router.py  schema.py  service.py
backend/app/utils/: utils.py
backend/core/: config.py  database.py  exceptions.py
backend/models/: __init__.py  simulations.py
backend/repositories/: simulation_repository.py  source_repository.py
backend/schemas/: actor.py  simulation.py  source.py  volume.py
backend/services/: actor_service.py  simulation_service.py  source_service.py  volume_service.py
backend/utils/: __init__.py  utils.py
(+100 files in other folders)
