[project]
name = "ProjeCT"
version = "0.1.0"
description = "A full-stack application for computed tomography (CT) research."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "opengate>=10.0.2",
    "pydantic-settings>=2.8.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.0",
    "pyvista>=0.44.2",
    "sqlalchemy>=2.0.40",
]
